增加特征提取单元测试

--- a/tests/BUILD
+++ b/tests/BUILD
@@ -2,5 +2,5 @@ cc_test(
   name = "tests",
   srcs = ["tests.cpp"],
   deps = ["@gtest//:gtest", "//asr:wave_reader"],
-  data = ["test.wav"]
+  data = ["test.wav", "mfcc.conf"]
 )
