增加online_feature的单元测试

--- a/tests/BUILD
+++ b/tests/BUILD
@@ -1,6 +1,10 @@
 cc_test(
-  name = "tests",
-  srcs = ["tests.cpp"],
-  deps = ["@gtest//:gtest", "//asr:wave_reader"],
-  data = ["test.wav", "mfcc.conf"]
+    name = "tests",
+    srcs = ["tests.cpp"],
+    deps = [
+        "@gtest//:gtest",
+        "//asr:online_feature"],
+        "//asr:wave_reader"
+    data = ["test.wav", "mfcc.conf"],
+    linkopts = ["-ldl"]
 )
