直接测试外部接口asr

--- a/tests/BUILD
+++ b/tests/BUILD
@@ -1,11 +1,7 @@
 cc_test(
     name = "tests",
     srcs = ["tests.cpp"],
-    deps = [
-        "@gtest//:gtest",
-        "//asr:online_asr",
-        "//asr:wave_reader"
-    ],
+    deps = ["@gtest//:gtest", "//asr:asr"],
     data = ["test.wav", "model"],
     linkopts = ["-ldl"]
 )
