--- a/so_example/Makefile
+++ b/so_example/Makefile
@@ -1,5 +1,5 @@
 # Created by tz301 on 2020/07/03
-LIB := -L. -lasr -L/opt/intel/mkl/lib/intel64 -Wl,-rpath=.
+LIB := -L. -lasr -lzmq -L/opt/intel/mkl/lib/intel64 -Wl,-rpath=.
 
 test: test.cpp
 	g++ $^ -std=c++11 -I. $(LIB) -o $@
