删除不需要的依赖和python包装

--- a/tests/BUILD
+++ b/tests/BUILD
@@ -1,17 +1,7 @@
-DATA = ["test.wav", "model"]
-
 cc_test(
     name = "tests",
     srcs = ["tests.cpp"],
     deps = ["@gtest//:gtest", "//asr:asr"],
-    data = DATA,
+    data = ["test.wav", "model"],
     linkopts = ["-ldl"]
-)
-
-py_test(
-    name = "tests_py",
-    srcs = ["tests.py"],
-    deps = ["//asr:asr_py"],
-    data = DATA,
-    default_python_version = "PY3",
 )
