--- a/server/Makefile
+++ b/server/Makefile
@@ -1,9 +1,9 @@
 # Created by tz301 on 2020/07/03
 LIB := -L. -lasr -lzmq -L/opt/intel/mkl/lib/intel64 -Wl,-rpath=.
 
-test: test.cpp
+server: server.cpp
 	g++ $^ -std=c++11 -I. $(LIB) -o $@
 
 .PHONY: clean
 clean:
-	-rm -rf test
+	-rm -rf server
