调整pylint的检查

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ matrix:
   include:
     - language: python
       python: "3.7"
-      script: python3 -m pylint --indent-string='  ' --max-line-length=80 tests asr
+      script: python3 -m pylint --indent-string='  ' --max-line-length=80 server
 
     - language: c++
       install: sudo pip install cpplint
